apply plugin: 'com.android.application'

android {

    compileSdkVersion 30

    defaultConfig {
        applicationId "threads.thor"
        minSdkVersion 28
        targetSdkVersion 30
        versionCode 74
        versionName "0.7.4"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"


        def documentsAuthorityValue = applicationId + ".provider"

        // Now we can use ${documentsAuthority} in our Manifest
        manifestPlaceholders =
                [documentsAuthority: documentsAuthorityValue]
        // Now we can use BuildConfig.DOCUMENTS_AUTHORITY in our code
        buildConfigField "String",
                "DOCUMENTS_AUTHORITY",
                "\"${documentsAuthorityValue}\""
    }

    buildTypes {
        debug {
            shrinkResources false
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'),
                    'proguard-rules.pro'
        }

        release {
            shrinkResources true
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'),
                    'proguard-rules.pro'
        }
    }



    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    packagingOptions {
        exclude 'META-INF/DEPENDENCIES'
    }


    buildToolsVersion '30.0.3'
}

dependencies {

    implementation fileTree(include: ['*.jar'], dir: 'libs')


    // Android (LICENSE done)
    implementation 'androidx.work:work-runtime:2.5.0'

    // Android (LICENSE done)
    implementation 'com.google.android.material:material:1.3.0'

    // Android (LICENSE done)
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'

    // API (LICENSE done)
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'

    // API (LICENSE done)
    implementation 'androidx.room:room-runtime:2.3.0'

    // API (LICENSE done)
    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'

    // API (LICENSE done)
    implementation 'org.minidns:minidns-client:1.0.0'

    // API (LICENSE done)
    implementation 'androidx.appcompat:appcompat:1.3.0'

    // API (LICENSE done)
    implementation 'androidx.webkit:webkit:1.4.0'

    // API (LICENSE done)
    implementation 'com.google.protobuf:protobuf-java:3.15.6'

    // API (LICENSE done)
    implementation 'commons-io:commons-io:2.8.0'

    // API (LICENSE done)
    implementation 'com.google.guava:guava:30.1-android'

    // API (LICENSE done)
    implementation 'com.journeyapps:zxing-android-embedded:4.2.0'

    // UI Graphics (LICENSE done)
    implementation 'com.github.bumptech.glide:glide:4.12.0'

    // API (LICENSE done)
    implementation 'org.bouncycastle:bcprov-jdk15on:1.62'

    // API (LICENSE done)
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.62'

    // https://mvnrepository.com/artifact/at.favre.lib/hkdf
    implementation group: 'at.favre.lib', name: 'hkdf', version: '1.0.1'

    // https://mvnrepository.com/artifact/commons-cli/commons-cli
    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

    implementation 'org.glassfish:javax.json:1.1.4'

    // API (LICENSE done)
    annotationProcessor 'androidx.room:room-compiler:2.3.0'

    // Testing
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test:runner:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
    androidTestImplementation 'org.apache.commons:commons-text:1.9'
}

